; ModuleID = '/home/carl/AnghaBench/lab/engine/code/game/extr_g_bot.c_Svcmd_BotList_f.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/game/extr_g_bot.c_Svcmd_BotList_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_TOKEN_CHARS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [65 x i8] c"^1name             model            aifile              funname\0A\00", align 1
@g_numBots = common dso_local global i32 0, align 4
@g_botInfos = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [5 x i8] c"name\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"UnnamedPlayer\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"funname\00", align 1
@.str.4 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"model\00", align 1
@.str.6 = private unnamed_addr constant [14 x i8] c"visor/default\00", align 1
@.str.7 = private unnamed_addr constant [7 x i8] c"aifile\00", align 1
@.str.8 = private unnamed_addr constant [17 x i8] c"bots/default_c.c\00", align 1
@.str.9 = private unnamed_addr constant [25 x i8] c"%-16s %-16s %-20s %-20s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Svcmd_BotList_f() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = load i32, i32* @MAX_TOKEN_CHARS, align 4
  %8 = zext i32 %7 to i64
  %9 = call i8* @llvm.stacksave()
  store i8* %9, i8** %2, align 8
  %10 = alloca i8, i64 %8, align 16
  store i64 %8, i64* %3, align 8
  %11 = load i32, i32* @MAX_TOKEN_CHARS, align 4
  %12 = zext i32 %11 to i64
  %13 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %4, align 8
  %14 = load i32, i32* @MAX_TOKEN_CHARS, align 4
  %15 = zext i32 %14 to i64
  %16 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %5, align 8
  %17 = load i32, i32* @MAX_TOKEN_CHARS, align 4
  %18 = zext i32 %17 to i64
  %19 = alloca i8, i64 %18, align 16
  store i64 %18, i64* %6, align 8
  %20 = call i32 @trap_Print(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %21

21:                                               ; preds = %80, %0
  %22 = load i32, i32* %1, align 4
  %23 = load i32, i32* @g_numBots, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %83

25:                                               ; preds = %21
  %26 = load i32*, i32** @g_botInfos, align 8
  %27 = load i32, i32* %1, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @Info_ValueForKey(i32 %30, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %32 = trunc i64 %8 to i32
  %33 = call i32 @Q_strncpyz(i8* %10, i32 %31, i32 %32)
  %34 = load i8, i8* %10, align 16
  %35 = icmp ne i8 %34, 0
  br i1 %35, label %38, label %36

36:                                               ; preds = %25
  %37 = call i32 @strcpy(i8* %10, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  br label %38

38:                                               ; preds = %36, %25
  %39 = load i32*, i32** @g_botInfos, align 8
  %40 = load i32, i32* %1, align 4
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i32, i32* %39, i64 %41
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @Info_ValueForKey(i32 %43, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  %45 = trunc i64 %12 to i32
  %46 = call i32 @Q_strncpyz(i8* %13, i32 %44, i32 %45)
  %47 = load i8, i8* %13, align 16
  %48 = icmp ne i8 %47, 0
  br i1 %48, label %51, label %49

49:                                               ; preds = %38
  %50 = call i32 @strcpy(i8* %13, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.4, i64 0, i64 0))
  br label %51

51:                                               ; preds = %49, %38
  %52 = load i32*, i32** @g_botInfos, align 8
  %53 = load i32, i32* %1, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32, i32* %52, i64 %54
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @Info_ValueForKey(i32 %56, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %58 = trunc i64 %15 to i32
  %59 = call i32 @Q_strncpyz(i8* %16, i32 %57, i32 %58)
  %60 = load i8, i8* %16, align 16
  %61 = icmp ne i8 %60, 0
  br i1 %61, label %64, label %62

62:                                               ; preds = %51
  %63 = call i32 @strcpy(i8* %16, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.6, i64 0, i64 0))
  br label %64

64:                                               ; preds = %62, %51
  %65 = load i32*, i32** @g_botInfos, align 8
  %66 = load i32, i32* %1, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %65, i64 %67
  %69 = load i32, i32* %68, align 4
  %70 = call i32 @Info_ValueForKey(i32 %69, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.7, i64 0, i64 0))
  %71 = trunc i64 %18 to i32
  %72 = call i32 @Q_strncpyz(i8* %19, i32 %70, i32 %71)
  %73 = load i8, i8* %19, align 16
  %74 = icmp ne i8 %73, 0
  br i1 %74, label %77, label %75

75:                                               ; preds = %64
  %76 = call i32 @strcpy(i8* %19, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.8, i64 0, i64 0))
  br label %77

77:                                               ; preds = %75, %64
  %78 = call i8* @va(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.9, i64 0, i64 0), i8* %10, i8* %16, i8* %19, i8* %13)
  %79 = call i32 @trap_Print(i8* %78)
  br label %80

80:                                               ; preds = %77
  %81 = load i32, i32* %1, align 4
  %82 = add nsw i32 %81, 1
  store i32 %82, i32* %1, align 4
  br label %21

83:                                               ; preds = %21
  %84 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %84)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @trap_Print(i8*) #2

declare dso_local i32 @Q_strncpyz(i8*, i32, i32) #2

declare dso_local i32 @Info_ValueForKey(i32, i8*) #2

declare dso_local i32 @strcpy(i8*, i8*) #2

declare dso_local i8* @va(i8*, i8*, i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
